--- a/app/views/webcontent/ProfileView.html
+++ b/app/views/webcontent/ProfileView.html
@@ -1,10 +1,10 @@
-<div id="profile">
+<div class="profile">
     <div>
         <h3>Name: <?php echo $GLOBALS["msg"]["user_name"]?><br/></h3>
         <h3>Username: <?php echo isset($GLOBALS["msg"]["user_uname"])?$GLOBALS["msg"]["user_uname"]:""?><br/></h3>
         <h3>E-mail: <?php echo isset($GLOBALS["msg"]["user_email"])?$GLOBALS["msg"]["user_email"]:""?><br/></h3>
     </div>
-
+    <br/><br/>
     <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br/></div>
     <div class="defaultform">
         <form action="http://localhost\filemanager\public\profile\changepassword" method="POST">
@@ -14,7 +14,7 @@
             <input type="submit">
         </form>
     </div>
-
+    <br/><br/><br/>
     <div class="defaultform">
         <h2>Change Username:</h2>
         <form action="http://localhost\filemanager\public\profile\changeusername" method="POST">
@@ -22,7 +22,6 @@
             <input type="submit">
         </form>
     </div>
-
 </div>
 
 
