filestorage, files in database

--- a/app/views/webcontent/ProfileView.html
+++ b/app/views/webcontent/ProfileView.html
@@ -1,5 +1,5 @@
 <div class="profile">
-    <div>
+    <div id="data">
         <h3>Name: <?php echo $GLOBALS["msg"]["user_name"]?><br/></h3>
         <h3>Username: <?php echo isset($GLOBALS["msg"]["user_uname"])?$GLOBALS["msg"]["user_uname"]:""?><br/></h3>
         <h3>E-mail: <?php echo isset($GLOBALS["msg"]["user_email"])?$GLOBALS["msg"]["user_email"]:""?><br/></h3>
