--- a/app/views/webcontent/FilestorageView.html
+++ b/app/views/webcontent/FilestorageView.html
@@ -1,1 +1,28 @@
-Logged in...
+<h2>Feltöltött fájlaim</h2>
+<div id="filestorage">
+    <table>
+        <tr>
+            <th>Fajlnev:</th>
+            <th>Fajlmeret:</th>
+            <th>Modositva:</th>
+            <th>Muveletek:</th>
+            <th>Küldte:</th>
+        </tr>
+        <?php
+            foreach ($GLOBALS["msg"] as $items) {
+                echo('<tr>
+                        <th>'.$items["file_name"].'</th>
+                        <th>'.$items["file_size"].' bytes</th>
+                        <th>'.$items["modif_date"].'</th>
+                        <th>Muveletek</th>
+                        <th>Küldte:</th>
+                    </tr>');
+            }
+        ?>
+    </table>
+    <form action="http://localhost\filemanager\public\filestorage\uploadfile" method="POST" enctype="multipart/form-data">
+        <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br/></div>
+        <input type="file" name="file"><br>
+        <input type="submit" name="uploadfile">
+    </form>
+</div>
