refactoring, some css

--- a/app/views/webcontent/LoginView.html
+++ b/app/views/webcontent/LoginView.html
@@ -4,6 +4,6 @@
         <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br/></div>
         Username: <input type="text" name="username"><br>
         Password: <input type="password" name="password"><br>
-        <input type="submit">
+        <input type="submit" name="asd">
     </form>
 </div>
