--- a/app/views/HeaderView.html
+++ b/app/views/HeaderView.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Fileamanager</title>
-        <link rel="stylesheet" href="http://localhost\filemanager\public\css\default.css"/>
+        <link rel="stylesheet" href="\filemanager\public\css\default.css"/>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
     <?php echo Session::get("loggedin")?'<div id="logged">
                                             <a href="http://localhost\filemanager\public\filestorage\logout">logout</a>
                                             <a href="http://localhost\filemanager\public\profile">Profile</a>
-                                            <a href="http://localhost\filemanager\public\filestorage">My files</a>
+                                            <a href="http://localhost\filemanager\public\filestorage\index">My files</a>
                                         </div>':""?>
 
 </div>
