--- a/app/views/webcontent/FilestorageView.html
+++ b/app/views/webcontent/FilestorageView.html
@@ -1,36 +1,47 @@
-<h2>Feltöltött fájlaim</h2>
-<div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br/></div>
 <div id="filestorage">
+    <div id="uploadform">
+        <h2>Feltöltött fájlaim</h2>
+        <div class="error"><?php echo isset($GLOBALS["msg"]["uploadErr"])?$GLOBALS["msg"]["uploadErr"]:""?></div>
+        <form action="http://localhost\filemanager\public\filestorage\uploadfile" method="POST" enctype="multipart/form-data">
+            <input type="file" name="file">
+            <input type="submit" name="uploadfile">
+        </form>
+    </div>
+    <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br/></div>
     <table>
         <tr>
-            <?php echo('<th><a href="http://localhost\filemanager\public\filestorage\orderby/'.$GLOBALS['msg']['nameorder'].'">Fajlnev</a></th>
-            <th><a href="http://localhost\filemanager\public\filestorage\orderby/'.$GLOBALS['msg']['sizeorder'].'">Fajlmeret</a></th>
-            <th><a href="http://localhost\filemanager\public\filestorage\orderby/'.$GLOBALS['msg']['modifdateorder'].'">Modositva</a></th>');?>
+            <?php echo('<th><a href="http://localhost\filemanager\public\filestorage\listfiles/'.$GLOBALS['msg']['nameorder'].'">Fajlnev</a></th>
+            <th><a href="http://localhost\filemanager\public\filestorage\listfiles/'.$GLOBALS['msg']['sizeorder'].'">Fajlmeret</a></th>
+            <th><a href="http://localhost\filemanager\public\filestorage\listfiles/'.$GLOBALS['msg']['modifdateorder'].'">Modositva</a></th>');?>
             <th>Muveletek:</th>
             <th>Küldte:</th>
         </tr>
         <?php
             foreach ($GLOBALS["files"] as $items) {
                 echo('<tr>
-                        <th>'.$items["file_name"].'</th>
-                        <th>'.$items["file_size"].' bytes</th>
-                        <th>'.$items["modif_date"].'</th>
-                        <th>
+                        <td>'.$items["file_name"].'</td>
+                        <td>'.$items["file_size"].' bytes</td>
+                        <td>'.$items["modif_date"].'</td>
+                        <td>
                             <a href="http://localhost\filemanager\public\filestorage\downloadfile/'.$items['file'].'">
                                 <img src="http://localhost\filemanager\app\icons\download.png">
                             </a>
                             <a href="http://localhost\filemanager\public\filestorage\deletefile/'.$items['file'].'">
                                 <img src="http://localhost\filemanager\app\icons\delete.png">
                             </a>
-                        </th>
-                        <th>Küldte:</th>
-                    </tr>');
+                        </td>
+                        <td>Küldte:</td>
+                    </tr>
+                ');
+
             }
         ?>
     </table>
-    <form action="http://localhost\filemanager\public\filestorage\uploadfile" method="POST" enctype="multipart/form-data">
-        <div class="error"><?php echo isset($GLOBALS["msg"]["uploadErr"])?$GLOBALS["msg"]["uploadErr"]:""?><br/></div>
-        <input type="file" name="file"><br>
-        <input type="submit" name="uploadfile">
-    </form>
+    <?php
+        for ($i=1; $i<$GLOBALS["msg"]["pagenum"]; $i++) {
+            echo('<a href="http://localhost\filemanager\public\filestorage\listfiles/"></a>');
+        }
+    ?>
+
+
 </div>
