--- a/app/views/webcontent/SignupView.html
+++ b/app/views/webcontent/SignupView.html
@@ -1,7 +1,7 @@
 <div class="defaultform">
     <h2>Sign Up</h2>
     <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br></div>
-    <form action="http://localhost\filemanager\public\signup\SignUpSubmit" method="POST">
+    <form action="http://localhost\filemanager\public\signup\signging" method="POST">
         <div class="error"><?php echo isset($GLOBALS["msg"]["nameErr"])?$GLOBALS["msg"]["nameErr"]:""?><br/></div>
         Name: <input type="text" name="name"><br>
         <div class="error"><?php echo isset($GLOBALS["msg"]["emailErr"])?$GLOBALS["msg"]["emailErr"]:""?><br/></div>
