--- a/app/views/webcontent/ErrorView.html
+++ b/app/views/webcontent/ErrorView.html
@@ -1,1 +1,1 @@
-ERROR: <?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:"" ?>
+ <?php echo $GLOBALS["msg"]["message"]?? "" ?>
