--- a/app/views/webcontent/SignupView.html
+++ b/app/views/webcontent/SignupView.html
@@ -2,14 +2,14 @@
     <h2>Sign Up</h2>
     <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br></div>
     <form action="http://localhost\filemanager\public\signup\signging" method="POST">
-        <div class="error"><?php echo isset($GLOBALS["msg"]["nameErr"])?$GLOBALS["msg"]["nameErr"]:""?><br/></div>
-        Name: <input type="text" name="name"><br>
-        <div class="error"><?php echo isset($GLOBALS["msg"]["emailErr"])?$GLOBALS["msg"]["emailErr"]:""?><br/></div>
+        <div class="error"><?php echo $GLOBALS["msg"]["nameErr"]?? ''?></div>
+        Name: <input type="text" name="name"><br/>
+        <div class="error"><?php echo $GLOBALS["msg"]["emailErr"]?? ''?></div>
         E-mail: <input type="text" name="email"><br>
-        <div class="error"><?php echo isset($GLOBALS["msg"]["unameErr"])?$GLOBALS["msg"]["unameErr"]:""?><br/></div>
+        <div class="error"><?php echo $GLOBALS["msg"]["unameErr"]?? ''?></div>
         Username: <input type="text" name="username"><br>
-        <div class="error"><?php echo isset($GLOBALS["msg"]["passwordErr"])?$GLOBALS["msg"]["passwordErr"]:""?><br/></div>
+        <div class="error"><?php echo $GLOBALS["msg"]["passwordErr"]?? ''?></div>
         Password: <input type="password" name="password"><br>
-        <input type="submit">
+        <input type="submit" value="Regisztráció">
     </form>
 </div>
