--- a/app/views/webcontent/ProfileView.html
+++ b/app/views/webcontent/ProfileView.html
@@ -1,25 +1,25 @@
 <div class="profile">
+    <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br/></div>
     <div id="data">
-        <h3>Name: <?php echo $GLOBALS["msg"]["user_name"]?><br/></h3>
-        <h3>Username: <?php echo isset($GLOBALS["msg"]["user_uname"])?$GLOBALS["msg"]["user_uname"]:""?><br/></h3>
-        <h3>E-mail: <?php echo isset($GLOBALS["msg"]["user_email"])?$GLOBALS["msg"]["user_email"]:""?><br/></h3>
+        <h3>Név: <?php echo $GLOBALS["msg"]["user_name"]?><br/></h3>
+        <h3>Felhasználónév: <?php echo isset($GLOBALS["msg"]["user_uname"])?$GLOBALS["msg"]["user_uname"]:""?><br/></h3>
+        <h3>E-mail cím: <?php echo isset($GLOBALS["msg"]["user_email"])?$GLOBALS["msg"]["user_email"]:""?><br/></h3>
     </div>
     <br/><br/>
-    <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br/></div>
-    <div class="defaultform">
+    <div class="defaultform" id="profileform">
         <form action="http://localhost\filemanager\public\profile\changepassword" method="POST">
-            <h2>Change Password:</h2>
-            Old password: <input type="password" name="oldpassword"><br>
-            New password: <input type="password" name="newpassword"><br>
-            <input type="submit">
+            <h2>Jelszó változtatás:</h2>
+            Régi jelszó: <input type="password" name="oldpassword"><br>
+            Új jelszó: <input type="password" name="newpassword"><br>
+            <input type="submit" value="Változtat">
         </form>
     </div>
-    <br/><br/><br/>
+
     <div class="defaultform">
-        <h2>Change Username:</h2>
+        <h2>Felhasználónév változtatás:</h2>
         <form action="http://localhost\filemanager\public\profile\changeusername" method="POST">
-            New username: <input type="text" name="newusername"><br>
-            <input type="submit">
+            Új fehasználónév: <input type="text" name="newusername"><br>
+            <input type="submit" value="Változtat">
         </form>
     </div>
 </div>
