--- a/app/views/HeaderView.html
+++ b/app/views/HeaderView.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Fájlkezelő</title>
         <link rel="stylesheet" href="\filemanager\public\css\default.css"/>
 </head>
