--- a/app/views/webcontent/FilestorageView.html
+++ b/app/views/webcontent/FilestorageView.html
@@ -70,6 +70,7 @@
 
 
     <div id="storageleft">
+        <a  id="createfile" href="http://localhost\filemanager\public\editor\index">Fájl Létrehozása</a>
         <div class="defaultform">
             <h3>Feltöltés</h3>
             <form  action="http://localhost\filemanager\public\filestorage\uploadfile" method="POST" enctype="multipart/form-data">
