--- a/app/views/webcontent/ProfileView.html
+++ b/app/views/webcontent/ProfileView.html
@@ -1,27 +1,31 @@
 <div class="profile">
     <div class="error"><?php echo isset($GLOBALS["msg"]["message"])?$GLOBALS["msg"]["message"]:""?><br/></div>
-    <div id="data">
-        <h3>Név: <?php echo $GLOBALS["msg"]["user_name"]?><br/></h3>
-        <h3>Felhasználónév: <?php echo isset($GLOBALS["msg"]["user_uname"])?$GLOBALS["msg"]["user_uname"]:""?><br/></h3>
-        <h3>E-mail cím: <?php echo isset($GLOBALS["msg"]["user_email"])?$GLOBALS["msg"]["user_email"]:""?><br/></h3>
-    </div>
-    <br/><br/>
-    <div class="defaultform" id="profileform">
-        <form action="http://localhost\filemanager\public\profile\changepassword" method="POST">
-            <h2>Jelszó változtatás:</h2>
-            Régi jelszó: <input type="password" name="oldpassword"><br>
-            Új jelszó: <input type="password" name="newpassword"><br>
-            <input type="submit" value="Változtat">
-        </form>
+    <div class="flex">
+        <div id="data">
+            <h3>Név: <?php echo $GLOBALS["msg"]["user_name"]?><br/></h3>
+            <h3>Felhasználónév: <?php echo isset($GLOBALS["msg"]["user_uname"])?$GLOBALS["msg"]["user_uname"]:""?><br/></h3>
+            <h3>E-mail cím: <?php echo isset($GLOBALS["msg"]["user_email"])?$GLOBALS["msg"]["user_email"]:""?><br/></h3>
+        </div>
+        <br/><br/>
+
+        <div class="defaultform" id="profileform">
+            <form action="http://localhost\filemanager\public\profile\changepassword" method="POST">
+                <h2>Jelszó változtatás:</h2>
+                Régi jelszó: <input type="password" name="oldpassword"><br>
+                Új jelszó: <input type="password" name="newpassword"><br>
+                <input type="submit" value="Változtat">
+            </form>
+        </div>
+
+        <div class="defaultform">
+            <h2>Felhasználónév változtatás:</h2>
+            <form action="http://localhost\filemanager\public\profile\changeusername" method="POST">
+                Új fehasználónév: <input type="text" name="newusername"><br>
+                <input type="submit" value="Változtat">
+            </form>
+        </div>
     </div>
 
-    <div class="defaultform">
-        <h2>Felhasználónév változtatás:</h2>
-        <form action="http://localhost\filemanager\public\profile\changeusername" method="POST">
-            Új fehasználónév: <input type="text" name="newusername"><br>
-            <input type="submit" value="Változtat">
-        </form>
-    </div>
 </div>
 
 
